--- a/overcomplicated-todo-app/package.json
+++ b/overcomplicated-todo-app/package.json
@@ -10,6 +10,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux-firebase": "^3.6.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "redux-firestore": "^0.13.0"
   },
